etl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: etl
  name: etl
  namespace: ohdsi
spec:
  containers:
  - args:
    - sleep
    - infinity
    image: python:alpine3.19
    imagePullPolicy: IfNotPresent
    name: etl
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xjbz8
    - name: persistence
      mountPath: /data
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: dev-kmwoqttsbhle-default-worker-kkjg5-grrh7
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-xjbz8
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
  - name: persistence
    persistentVolumeClaim:
      claimName: postgres-pv-claim
